buildscript {
	ext {
		springBootVersion = '4.0.2'
		set('springCloudVersion', "2025.1.0")
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.3.1.5724"
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'jacoco'

//added to accept systemproperties while executing gradlew test cmd
test {
	systemProperties = System.properties
}


jar {
	archiveBaseName = 'scsb-auth'
	archiveVersion = '0.0.1-SNAPSHOT'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation fileTree(dir: '/data/commonjar', include: '*3.1.jar')
	implementation fileTree(dir: '/data/commonjar', include: '*base-1.0.jar')
	implementation("org.springframework:spring-remoting:2.0.8")
	implementation('org.apache.commons:commons-lang3:3.20.0')

	implementation('commons-beanutils:commons-beanutils:1.11.0')
	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
	implementation('org.springframework.boot:spring-boot-starter-web-services')

	implementation('org.codehaus.jettison:jettison:1.5.4')
	implementation('org.springframework.data:spring-data-commons')
	implementation('org.springframework.data:spring-data-jpa')
	implementation('info.freelibrary:freelib-marc4j:2.6.12')
	implementation 'net.sourceforge.javacsv:javacsv:2.0'
	implementation('org.projectlombok:lombok:1.18.42')
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'net.logstash.logback:logstash-logback-encoder:9.0'
	annotationProcessor('org.projectlombok:lombok:1.18.42')
	testImplementation('org.projectlombok:lombok:1.18.42')
	testAnnotationProcessor('org.projectlombok:lombok:1.18.42')
	implementation 'io.zipkin.brave:brave:6.3.0'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'

	implementation 'com.mysql:mysql-connector-j:9.1.0'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
	implementation 'org.json:json:20250517'
	implementation 'com.google.code.gson:gson:2.13.2'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
	implementation('org.owasp.encoder:encoder:1.4.0')

	testImplementation 'org.mockito:mockito-core:5.23.0'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:6.1.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:4.0.2'
}

configurations.all {
	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
		if (details.requested.group == 'org.apache.logging.log4j') {
			details.useVersion '3.0.0-beta2'
		}
	}
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport // report is always generated after tests run
	jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
	jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
}
jacocoTestReport {
	dependsOn test // tests are required to run before generating the report
}

jacocoTestReport {
	reports {
		xml.required = true
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}


jacoco {
	toolVersion = "0.8.14"
	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}

task scsbShiroJavadocs(type: Javadoc) {
	source = sourceSets.main.java
	classpath = configurations.implementation
	options.addStringOption('Xdoclint:none', '-quiet')
	String home = System.getProperty("user.home");
	destinationDir =  new File(home+"/scsb-javadocs/scsb-shiro");
}

/* bootJar {
	layered()
} */

jar {
	enabled = false
	archiveClassifier = '' //use empty string
}
